@@ -31,7 +31,11 @@ if [ -z "$JUMP_PROPERTIES" -o ! -f $JUMP_PROPERTIES ]; then
 fi
 
 if [ -z "$JUMP_DEFAULTP" -o ! -f $JUMP_DEFAULTP ]; then
-  JUMP_DEFAULTP=~/.jump/default-plugins.xml
+  JUMP_DEFAULTP=$JUMP_HOME/bin/default-plugins.xml
+fi
+
+if [ -z "$JUMP_DEFAULTP" -o ! -f $JUMP_DEFAULTP ]; then
+  JUMP_DEFAULTP=$JUMP_HOME/scripts/default-plugins.xml
 fi
 
 for libfile in $JUMP_LIB/*.jar $JUMP_LIB/*.zip
@@ -47,7 +51,7 @@ if [ -f "$JUMP_PROPERTIES" ]; then
 fi
 
 if [ -f "$JUMP_DEFAULTP" ]; then
-  JUMP_OPTS="$JUMP_OPTS -properties $JUMP_DEFAULTP"
+  JUMP_OPTS="$JUMP_OPTS -default-plugins $JUMP_DEFAULTP"
 fi
 
 if ( test -d "$JUMP_STATE" || test -f "$JUMP_STATE") then
